--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="" class="header-text link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="mail-normal">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link contacts"
@@ -47,7 +47,7 @@
         <button type="button" class="hero-btn">Order Service</button>
       </section>
       <section>
-        <h2 class="hidden">Advanced</h2>
+        <h2 hidden>Advanced</h2>
         <ul class="list">
           <li>
             <h3 class="advanced-header">Strategy</h3>
@@ -129,7 +129,7 @@
       <a href="./index.html" class="logo link"
         >Web<span class="footer-logo">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
