--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <li><a href="" class="header-text link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="mail-normal">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="link contacts"
@@ -43,7 +43,7 @@
     </header>
     <main>
       <section>
-        <h1 class="hidden">Cards</h1>
+        <h1 hidden>Cards</h1>
         <ul class="list">
           <li><button type="button" class="list-btn">All</button></li>
           <li><button type="button" class="list-btn">Web Site</button></li>
@@ -53,69 +53,91 @@
         </ul>
         <ul class="list">
           <li>
-            <img src="./images/banking.jpg" alt="banking-app" width="360" />
-            <h2 class="cards-names">Banking App Interface Concept</h2>
-            <p class="cards-description">App</p>
+            <a href="" class="link"
+              ><img src="./images/banking.jpg" alt="banking-app" width="360" />
+              <h2 class="cards-names">Banking App Interface Concept</h2>
+              <p class="cards-description">App</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="cashless-payment"
-              width="360"
-            />
-            <h2 class="cards-names">Cashless Payment</h2>
-            <p class="cards-description">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="cashless-payment"
+                width="360"
+              />
+              <h2 class="cards-names">Cashless Payment</h2>
+              <p class="cards-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="meditation-app"
-              width="360"
-            />
-            <h2 class="cards-names">Meditation App</h2>
-            <p class="cards-description">App</p>
+            <a href="" class="link">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="meditation-app"
+                width="360"
+              />
+              <h2 class="cards-names">Meditation App</h2>
+              <p class="cards-description">App</p></a
+            >
           </li>
           <li>
-            <img src="./images/taxi.jpg" alt="taxi-app" width="360" />
-            <h2 class="cards-names">Taxi Service</h2>
-            <p class="cards-description">Marketing</p>
+            <a href="" class="link">
+              <img src="./images/taxi.jpg" alt="taxi-app" width="360" />
+              <h2 class="cards-names">Taxi Service</h2>
+              <p class="cards-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/illustrations.jpg"
-              alt="screen-illustrations"
-              width="360"
-            />
-            <h2 class="cards-names">Screen Illustrations</h2>
-            <p class="cards-description">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/illustrations.jpg"
+                alt="screen-illustrations"
+                width="360"
+              />
+              <h2 class="cards-names">Screen Illustrations</h2>
+              <p class="cards-description">Design</p></a
+            >
           </li>
           <li>
-            <img src="./images/courses.jpg" alt="online-courses" width="360" />
-            <h2 class="cards-names">Online Courses</h2>
-            <p class="cards-description">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/courses.jpg"
+                alt="online-courses"
+                width="360"
+              />
+              <h2 class="cards-names">Online Courses</h2>
+              <p class="cards-description">Marketing</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/inst-concept.jpg"
-              alt="inst-concept"
-              width="360"
-            />
-            <h2 class="cards-names">Instagram Stories Concept</h2>
-            <p class="cards-description">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/inst-concept.jpg"
+                alt="inst-concept"
+                width="360"
+              />
+              <h2 class="cards-names">Instagram Stories Concept</h2>
+              <p class="cards-description">Design</p></a
+            >
           </li>
           <li>
-            <img src="./images/org-food.jpg" alt="org-food" width="360" />
-            <h2 class="cards-names">Organic Food</h2>
-            <p class="cards-description">Web Site</p>
+            <a href="" class="link">
+              <img src="./images/org-food.jpg" alt="org-food" width="360" />
+              <h2 class="cards-names">Organic Food</h2>
+              <p class="cards-description">Web Site</p></a
+            >
           </li>
           <li>
-            <img
-              src="./images/fresh-coffee.jpg"
-              alt="fresh-coffee"
-              width="360"
-            />
-            <h2 class="cards-names">Fresh Coffee</h2>
-            <p class="cards-description">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/fresh-coffee.jpg"
+                alt="fresh-coffee"
+                width="360"
+              />
+              <h2 class="cards-names">Fresh Coffee</h2>
+              <p class="cards-description">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
@@ -124,7 +146,7 @@
       <a href="./index.html" class="logo link"
         >Web<span class="footer-logo">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
